Alterando tudo para ser chamado com X-API-KEY
