# server/swagger/swagger.yaml
@@ -95,7 +95,7 @@ paths:
         500:
           description: "Erro que o servidor não soube lidar"
       security:
-        - authToken: []
+        - apiKey: [ ]
       x-swagger-router-controller: "server.controllers.dominio_controller"
   /autenticacao:
     post:
@@ -171,11 +171,12 @@ paths:
       x-swagger-router-controller: "server.controllers.animal_controller"
 
 securityDefinitions:
-  authToken:
+  apiKey:
     description: "jwt cross-token generated by authentication api"
     type: "apiKey"
-    name: "x-auth-token"
+    name: "x-api-key"
     in: "header"
+    x-apikeyInfoFunc: "server.configurations.filters.token_info"
 definitions:
   Paginado:
     type: object
